# ChatApp

./: CMakeLists.txt  README.md  client  client.cpp  compile.sh  notes.txt  resources.h  server.cpp
Coroutines/: Channel.h  WriteAwaitable.h
include/: MessageFrame.h  resources.h
include/Client/: Client.h
include/Coroutines/: Channel.h  ReadAwaitable.h
include/Messages/: MessageFrame.h  Server_Message.h
include/Polling/: Epoll.h
include/Server/: Client_Data.h  JThreadDispatcher.h  Server.h  ServerThreadManager.h
src/Client/: Client.cpp  Client_main.cpp
src/Polling/: Epoll.cpp
src/Server/: Server.cpp  Server_main.cpp
